# mHC.cu

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  runmodal.py
.githooks/: pre-commit
csrc/benchmarks/: bench_mhc_layer.cu  bench_rmsnorm.cu  bench_sinkhorn_knopp.cu
csrc/include/: mhc_types.h  utils.h
csrc/kernels/: fused_rmsnorm_matmul.cuh  mhc_layer.cuh  rmsnorm.cuh  sinkhorn_knopp.cuh  stream_ops.cuh
csrc/tests/: test_mhc_layer.cu  test_rmsnorm.cu  test_sinkhorn_knopp.cu  test_stream_mix_tc.cu
src/csrc/benchmarks/: bench_mhc_layer.cu
src/csrc/include/: utils.cuh
src/csrc/kernels/: mhc_layer.cuh  sinkhorn_knopp.cuh  stream_ops.cuh
src/python/: bindings.cu
src/python/benchmarks/: bench_layer.py
src/python/mhc/: layer.py  ops.py
src/python/tests/: test_layer.py
